# COMPSYS_Capstone_Team_3

./: README.md  adc.c  adc.h  main.c
Source/: CMakeLists.txt  adc.c  adc.h  constants.h  includes.h  inputs.c  main.c  wifi.c  wifi.h
Testing_wirless/: CMakeLists.txt  adc.c  constants.h  includes.h  inputs.c  inputs.h  main.c  picow_tls_client.c  picow_tls_client.h  test.c  tls_common.c  wifi.c  wifi.h
